<resources>
    <string name="version_info">
        iOS와 다르게 Android에선 아직 아래 기능을 지원하지 않습니다.\n
        \n
        - 글 수정, 댓글 수정\n
        - 타인의 프로필 조회\n
        - 해시태그와 링크\n
        \n
        추후 업데이트에서 추가될 예정입니다!! 감사합니다. 😊\n
        \n
        해당 창은 로그인 화면에서만 보이며 자동 로그인을 하면 보이지 않습니다.\n
    </string>
    <string name="app_name">NUTEE</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="fragment_home">NUTEE</string>
    <string name="fragment_search">검색</string>
    <string name="fragment_notice">공지사항</string>
    <string name="fragment_profile">프로필</string>

    <string name="term_of_use">
        제1조(목적)\n
NUTEE(이하 누티) 서비스 이용약관은 S&amp;N(이하 소울)이 서비스를 제공함에 있어, 소울와 이용자 간의 권리, 의무 및 책임 사항 등을 규정함을 목적으로 합니다.\n
\n
제2조(정의)\n
•	이 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n
•	“소울”란, 서비스를 제공하는 주체를 말합니다.\n
•	“서비스”란, 소울이 제공하는 모든 서비스 및 기능을 말합니다.\n
•	“이용자”란, 이 약관에 따라 서비스를 이용하는 회원을 말합니다.\n
•	“회원”이란, 서비스에 회원등록을 하고 서비스를 이용하는 성공회대 교내 학생을 말합니다.\n
•	“게시물”이란, 서비스에 게재된 문자, 사진, 광고 등을 말합니다.\n
•	“커뮤니티”란, 게시물을 게시할 수 있는 공간을 말합니다.\n
•	“이용 기록”이란, 이용자가 서비스를 이용하면서 누른 좋아요, 팔로잉/팔로워 등을 말합니다.\n
•	“로그 기록”이란, 이용자가 서비스를 이용하면서 자동으로 생성된 접속시간 등을 말합니다.\n
•	“계정”이란, 이용계약을 통해 생성된 회원의 고유 아이디와 이에 수반하는 정보를 말합니다.\n
•	“서비스 내부 알림 수단”이란, 팝업, 알림, 채팅, 공지사항, 내 정보 메뉴 등을 말합니다.\n
•	“관련법”이란, 정보통신망 이용촉진 및 정보보호 등에 관한 법률, 개인정보보호법, 통신비밀보호법 등 관련 있는 국내 법령을 말합니다.\n
•	“교내 인증”이란, 교내 학생 웹메일 등을 이용한 성공회대 교내 학생 확인 절차를 말합니다.\n
•	1항에서 정의되지 않은 약관 내 용어의 의미는 일반적인 이용관행에 의합니다.\n\n

제3조(약관 등의 명시와 설명 및 개정)\n
•	소울은 이 약관을 회원가입 화면 등에 게시합니다.\n
•	소울은 이 약관을 개정할 수 있습니다.\n
•	회원은 약관 일부분만을 동의 또는 거부할 수 없습니다.\n
\n
제4조(서비스의 제공)\n
•	누티는 다음 서비스를 제공합니다.\n
•	커뮤니티 서비스\n
•	교내 학식 식단 제공 서비스\n
•	학생회, 동아리 등의 활동 광고 정보 제공 서비스\n
•	특정 키워드에 해당하는 게시글 검색 결과를 제공하는 서비스\n
•	기타 소울이 정하는 서비스\n
•	소울은 운영상, 기술상의 필요에 따라 제공하고 있는 서비스를 변경할 수 있습니다.\n
•	소울은 천재지변, 인터넷 장애, 경영 악화 등으로 인해 서비스를 더 이상 제공하기 어려울 경우, 서비스를 통보 없이 중단할 수 있습니다.\n
•	소울은 1항부터 전항까지와 다음 내용으로 인해 발생한 피해에 대해 어떠한 책임을 지지 않습니다.\n
•	모든 서비스, 게시물, 이용 기록의 진본성, 무결성, 신뢰성, 이용가능성\n
•	서비스 이용 중 타인과 상호 간에 합의한 내용\n
•	게시물, 광고의 버튼, 하이퍼링크 등 외부로 연결된 서비스와 같이 소울이 제공하지 않은 서비스에서 발생한 피해\n
•	이용자의 귀책사유 또는 소울의 귀책 사유가 아닌 사유로 발생한 이용자의 피해\n
\n
제5조(서비스 이용계약의 성립)\n
•	성공회대 구성원이 아닌 경우 서비스를 이용하거나 회원가입을 할 수 없으며, 그럼에도 불구하고 성립된 회원가입은 무효로 간주됩니다.\n
•	소울과 회원의 서비스 이용계약은 서비스 내부의 회원가입 화면의 가입 양식에 따라 회원정보를 기입한 후 필수 약관에 동의한다는 의사표시를 한 비회원의 이용신청에 대하여, 서비스 화면에 이용승낙을 표시하는 방법 등으로 의사표시를 하면서 체결됩니다.\n
•	승낙은 신청순서에 따라 순차적으로 처리되며, 회원가입의 성립시기는 소울의 승낙이 회원에게 도달한 시점으로 합니다.\n
•	소울은 부정사용방지 및 본인확인을 위해 회원에게 본인 인증 및 학교 인증을 요청할 수 있습니다.\n
\n
제6조(개인정보의 관리 및 보호)\n
•	회원이 소울과 체결한 서비스 이용계약은 처음 이용계약을 체결한 본인에 한해 적용됩니다.\n
•	회원은 회원가입 시 등록한 정보에 변동이 있을 경우, 즉시 &quot;내 정보&quot; 메뉴 등을 이용하여 정보를 최신화해야 합니다.\n
•	회원의 아이디, 비밀번호, 이메일, 대학생 정보 등 모든 개인정보의 관리책임은 본인에게 있으므로, 타인에게 양도 및 대여할 수 없으며, 유출되지 않도록 관리해야 합니다. 만약 본인의 아이디 및 비밀번호를 타인이 사용하고 있음을 인지했을 경우 바로 서비스 내부의 문의 창구에 알려야 하고, 안내가 있는 경우 이에 즉시 따라야 합니다.\n
•	소울은 2항부터 전항까지를 이행하지 않아 발생한 피해에 대해 어떠한 책임을 지지 않습니다.\n
\n
제7조(서비스 이용계약의 종료)\n
•	회원은 언제든지 본인의 계정으로 로그인한 뒤 서비스 내부의 &quot;탈퇴하기&quot; 버튼을 누르는 방법으로 탈퇴를 요청할 수 있으며, 문의 창구를 통한 탈퇴 요청 등은 처리되지 않습니다. 소울은 해당 요청을 확인한 후 탈퇴를 처리합니다.\n
•	회원은 관리하고 있는 커뮤니티가 있을 경우, 이를 양도하거나 삭제하기 전까지 탈퇴를 할 수 없습니다.\n
•	탈퇴 처리가 완료 되었더라도, 회원이 게시한 게시물은 삭제되지 않습니다.\n
•	소울은 회원이 연속하여 1년 동안 로그인을 하지 않을 경우, 회원의 동의 없이 회원자격을 박탈할 수 있습니다.\n
•	소울은 천재지변, 테러, 폐교 등 불가피한 사유로 더 이상 서비스를 제공할 수 없을 경우, 회원의 동의 없이 회원자격을 박탈할 수 있습니다.\n
•	소울은 1항부터 전항까지로 인해 발생한 피해에 대해 어떠한 책임을 지지 않습니다.\n
\n
제8조(회원에 대한 통보)\n
•	소울이 회원에 대한 통보를 하는 경우, 서비스 내부 알림 수단을 이용합니다.\n
•	소울은 다수의 회원에 대한 통보를 할 경우 공지사항 등에 게시함으로써 개별 통보에 갈음할 수 있습니다.\n
•	회원이 30일 이내에 의사 표시를 하지 않을 경우, 통보 내용에 대해 동의한 것으로 간주합니다.\n
\n
제9조(저작권의 귀속)\n
•	소울은 유용하고 편리한 서비스를 제공하기 위해, 2020년부터 서비스 및 서비스 내부의 기능의 체계와 다양한 기능을 직접 설계 및 운영하고 있는 데이터베이스 제작자에 해당합니다. 소울은 저작권법에 따라 데이터베이스 제작자는 복제권 및 전송권을 포함한 데이터베이스 전부에 대한 권리를 가지고 있으며, 이는 법률에 따라 보호를 받는 대상입니다. 그러므로 이용자는 데이터베이스 제작자인 소울의 승인 없이 데이터베이스의 전부 또는 일부를 복제·배포·방송 또는 전송할 수 없습니다.\n
•	소울이 작성한 게시물에 대한 권리는 소울에게 귀속되며, 회원이 작성한 게시물에 대한 권리는 회원에게 귀속됩니다. 단, 소울은 서비스의 운영, 확장, 홍보 등의 필요한 목적으로 회원의 저작물을 합리적이고 필요한 범위 내에서 별도의 허락 없이 수정하여 무상으로 사용하거나 제휴사에게 제공할 수 있습니다. 이 경우, 회원의 개인정보는 제공하지 않습니다.\n
•	소울은 전항 이외의 방법으로 회원의 게시물을 이용할 경우, 서비스 내부 알림 수단과 회원의 연락처를 이용하여 회원의 동의를 받아야 합니다.\n
\n
제10조(게시물의 게시 중단)\n
•	소울은 관련법에 의거하여 회원의 게시물로 인한 법률상 이익 침해를 근거로, 다른 이용자 또는 제3자가 회원 또는 회사를 대상으로 하여 민형사상의 법적 조치를 취하거나 관련된 게시물의 게시중단을 요청하는 경우, 소울은 해당 게시물에 대한 접근을 잠정적으로 제한하거나 삭제할 수 있습니다.\n
\n
제11조(광고의 게재 및 발신)\n
•	소울은 서비스의 제공을 위해 서비스 내부에 광고를 게재할 수 있습니다.\n
•	소울은 이용자의 이용 기록을 활용한 광고를 게재할 수 있습니다.\n
•	소울은 회원이 광고성 정보 수신에 동의할 경우, 서비스 내부 알림 수단과 회원의 연락처를 이용하여 광고성 정보를 발신할 수 있습니다.\n
•	소울은 광고 게재 및 동의된 광고성 정보의 발신으로 인해 발생한 피해에 대해 어떠한 책임을 지지 않습니다.\n
\n
제12조(금지행위)\n
•	이용자는 다음과 같은 행위를 해서는 안됩니다.\n
•	개인정보 또는 계정 기만, 침해, 공유 행위\n
•	개인정보를 허위, 누락, 오기, 도용하여 작성하는 행위\n
•	타인의 개인정보 및 계정을 수집, 저장, 공개, 이용하는 행위\n
•	자신과 타인의 개인정보를 제3자에게 공개, 양도하는 행위\n
•	다중 계정을 생성 및 이용하는 행위\n
•	자신의 계정을 이용하여 타인의 요청을 이행하는 행위\n
•	시스템 부정행위\n
•	해당 대학교의 구성원이 아닌 이용자가 서비스를 이용하는 행위\n
•	허가하지 않은 방식의 서비스 이용 행위\n
•	소울의 모든 재산에 대한 침해 행위\n
•	업무 방해 행위\n
•	서비스 관리자 또는 이에 준하는 자격을 사칭하거나 허가없이 취득하여 직권을 행사하는 행위\n
•	소울 및 타인의 명예를 손상시키거나 업무를 방해하는 행위\n
•	서비스 내부 정보 일체를 허가 없이 이용, 변조, 삭제 및 외부로 유출하는 행위\n
•	이 약관, 개인정보 처리방침, 커뮤니티 이용규칙에서 이행 및 비이행을 명시한 내용에 반하는 행위\n
•	기타 현행법에 어긋나거나 부적절하다고 판단되는 행위\n
•	이용자가 1항에 해당하는 행위를 할 경우, 소울은 다음과 같은 조치를 영구적으로 취할 수 있습니다.\n
•	이용자의 서비스 이용 권한, 자격, 혜택 제한 및 회수\n
•	회원과 체결된 이용계약을 회원의 동의나 통보 없이 파기\n
•	회원가입, 본인 인증, 학교 인증 거부\n
•	회원의 커뮤니티, 게시물, 이용기록을 임의로 삭제, 중단, 변경\n
•	그 외 소울이 필요하다고 판단되는 조치\n
•	소울은 1항부터 전항까지로 인해 발생한 피해에 대해 어떠한 책임을 지지 않으며, 이용자는 귀책사유로 인해 발생한 모든 손해를 배상할 책임이 있습니다.\n
\n
제13조(기타)\n
•	이 약관은 2020년 4월 7일에 마지막으로 작성했습니다.\n
•	이 약관에서 정하지 아니한 사항과 이 약관의 해석에 관하여는 관련법 또는 관례에 따릅니다.\n
•	이 약관에도 불구하고 다른 약관이나 서비스 이용 중 안내 문구 등으로 달리 정함이 있는 경우에는 해당 내용을 우선으로 합니다.\n
 \n
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skhuEmail">email@office.skhu.ac.kr</string>
    <string name="emailText">이메일</string>
    <string name="closeText">닫기</string>
    <string name="preivious">이전</string>
    <string name="next">다음</string>
    <string name="idText">아이디</string>
    <string name="nickNameText">닉네임</string>
    <string name="categoryText">카테고리</string>
    <string name="departmentText">전공</string>
    <string name="passwordText">비밀번호</string>
    <string name="setting">설정</string>
    <string name="developerInformation">개발자 정보</string>
    <string name="save">저장</string>
    <string name="changeSuccess">성공적으로 변경되었습니다!\n변경까지 시간이 걸릴 수 있습니다.</string>
    <string name="changeError">변경 사항을\확인해 주세요!</string>
    <string name="changeFailProfilImage">변경에 실패했습니다.\n크기를 1:1로 변경하여 시도하세요.</string>
    <string name="mainDetailTest">
        성공회대의 교육이념은 ‘열림·나눔·섬김’ 입니다. 열림이란 나와 나 자신이 속한 단체가
가족주의의 이기심을 버리고 이웃과 사회와 소통함으로써 평화를 이루는 것입니다.
나눔이란 내가 소유하고 있는 물질만이 아니라 재능까지 포함하여 모든 것을 이웃과
공유하는 봉사의 실천을 통해 공의로운사회를 형성하는 것입니다. 섬김이란 하느님을
섬기고 내 이웃을 사랑으로 섬김으로써 서로 존중하는 사회를 이룩하는 것입니다.
    </string>
    <string name="detailImageMore">+ %d</string>
</resources>
