<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.member.register.fragment.EmailAuthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_register_category_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_register_category_input_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="선호하는 카테고리를 설정해주세요!!"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_register_category_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="15dp"
            android:visibility="gone"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/tv_register_category_input_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_register_category_input_title_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_register_select_category_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingVertical="20dp"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_category_input_title_text"
            tools:layout_editor_absoluteX="20dp"
            android:focusable="true">

            <TextView
                android:id="@+id/register_select_category"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="카테고리를 설정하러 가볼까요?"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textIsSelectable="true"
                />

            <ImageView
                android:id="@+id/et_register_select_category_add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_vevtor_asset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/nuteeBase"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/register_select_category"
                app:layout_constraintStart_toStartOf="@id/register_select_category"
                app:layout_constraintEnd_toEndOf="@id/register_select_category"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selected_item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="30dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/cl_register_category_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cl_register_category_content"
        app:layout_constraintTop_toBottomOf="@+id/cl_register_category_content"
        tools:listitem="@layout/item_category_selected" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_register_category_buttons"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_category_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/text_selector"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_category_previous"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_category_previous"
            app:layout_constraintTop_toTopOf="@+id/tv_category_previous" />

        <TextView
            android:id="@+id/tv_category_previous"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/preivious"
            android:textColor="@color/text_selector"
            android:textSize="20dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_category_next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>